Select Input, Input scaling

--- a/projects/vynil-ui-demo/src/app/screens/inputs/input-demo-screen/input-demo-screen.component.html
+++ b/projects/vynil-ui-demo/src/app/screens/inputs/input-demo-screen/input-demo-screen.component.html
@@ -2,15 +2,15 @@
     <vui-text size="header">Input</vui-text>
     <vui-card>
         <vui-view padding="1.5rem" rowGap="1.5rem">
-            <vui-view [formGroup]="form" rowGap="0.75rem">
+            <vui-view [formGroup]="form" rowGap="0.75rem" alignItems="stretch" style="width: 100%">
                 <vui-text size="l">Text</vui-text>
-                <vui-input formControlName="text" size="l" type="text"></vui-input>
+                <vui-input formControlName="text" flex="1" type="text"></vui-input>
                 <vui-text size="l">Number</vui-text>
-                <vui-input formControlName="number" size="l" type="number"></vui-input>
+                <vui-input formControlName="number" flex="1" type="number"></vui-input>
                 <vui-text size="l">Password</vui-text>
-                <vui-input formControlName="password" size="l" type="password"></vui-input>
+                <vui-input formControlName="password" flex="1" type="password"></vui-input>
             </vui-view>
-            <vui-view justifyContent="stretch" rowGap="0.75rem">
+            <vui-view rowGap="0.75rem" alignItems="stretch" style="width: 100%">
                 <vui-text size="large">Values</vui-text>
                 <vui-card cardStyle="dark">
                     <vui-view padding="1rem" rowGap="0.75rem">
