--- a/projects/vynil-ui/src/lib/components/inputs/input/input.component.html
+++ b/projects/vynil-ui/src/lib/components/inputs/input/input.component.html
@@ -5,12 +5,10 @@
     [ngClass]="size"
     [ngStyle]="{
         'text-align': align,
+        'flex': flex,
         'width': width,
-        'height': height,
         'max-width': maxWidth,
-        'max-height': maxHeight,
         'min-width': minWidth,
-        'min-height': minHeight,
         'margin': margin,
         'padding': padding,
     }"
