--- a/projects/vynil-ui-demo/src/app/screens/images/image-demo-screen/image-demo-screen.component.html
+++ b/projects/vynil-ui-demo/src/app/screens/images/image-demo-screen/image-demo-screen.component.html
@@ -3,7 +3,7 @@
     <vui-view rowGap="1rem">
         <vui-view rowGap="0.5rem">
             <vui-text size="l">Regular</vui-text>
-            <vui-image height="10rem" width="15rem" url="https://cdn.stocksnap.io/img-thumbs/960w/vinyl-record_OTOSZLA6WF.jpg"></vui-image>
+            <vui-image height="10rem" url="https://cdn.stocksnap.io/img-thumbs/960w/vinyl-record_OTOSZLA6WF.jpg"></vui-image>
         </vui-view>
         <vui-view rowGap="0.5rem">
             <vui-text size="l">Bordered</vui-text>
