--- a/projects/vynil-ui/src/lib/components/inputs/image-input/image-input.component.scss
+++ b/projects/vynil-ui/src/lib/components/inputs/image-input/image-input.component.scss
@@ -2,10 +2,7 @@
 
 .preview {
     ::ng-deep .view {
-        height: 2rem;
-        min-height: 2rem;
         border-radius: var(--vui-variable-radius) var(--vui-variable-radius) 0 0;
-        border: var(--vui-variable-border) solid var(--vui-color-primary);
         border-width: var(--vui-variable-border) var(--vui-variable-border) 0 var(--vui-variable-border);
         background-color: var(--vui-color-background);
 
@@ -17,27 +14,14 @@
 
 vui-input {
     ::ng-deep .input{
-        border-top-width: 0;
+        padding: var(--vui-variable-padding-s) var(--vui-variable-padding);
         border-radius: 0 0 var(--vui-variable-radius) var(--vui-variable-radius);
     }
 }
 
-.upload-circle {
-    cursor: pointer;
-    position: absolute;
-    bottom: 0.5rem;
-    right: 0.5rem;
-    
-    ::ng-deep {
-        .view {
-            border-width: 0;
-            transition: background ease var(--vui-variable-transition-length);
-        }
-    }
-
-    &:hover {
-        ::ng-deep .view {
-            background-color: var(--vui-color-primary-lighter);
-        }
+vui-image {
+    ::ng-deep img{
+        width: auto;
+        border-radius: var(--vui-variable-radius) var(--vui-variable-radius) 0 0;
     }
 }
