--- a/projects/vynil-ui/src/lib/components/inputs/input/input.component.html
+++ b/projects/vynil-ui/src/lib/components/inputs/input/input.component.html
@@ -2,14 +2,6 @@
     class="input"
     [type]="type"
     [formControl]="control"
-    [ngClass]="size"
-    [ngStyle]="{
-        'text-align': align,
-        'flex': flex,
-        'width': width,
-        'max-width': maxWidth,
-        'min-width': minWidth,
-        'margin': margin,
-        'padding': padding,
-    }"
+    [ngClass]="textSize"
+    [ngStyle]="styleObject"
 />
