--- a/projects/vynil-ui/src/lib/components/inputs/input/input.component.scss
+++ b/projects/vynil-ui/src/lib/components/inputs/input/input.component.scss
@@ -9,7 +9,7 @@ input {
     vertical-align: middle;
     box-sizing: content-box;
     color: var(--vui-color-primary);
-    padding: var(--vui-variable-padding);
+    padding: var(--vui-variable-padding-s);
     height: var(--vui-variable-font-size-m);
     font-size: var(--vui-variable-font-size-m);
     line-height: var(--vui-variable-font-size-m);
