--- a/projects/vynil-ui-demo/src/app/screens/home-screen/home-screen.component.html
+++ b/projects/vynil-ui-demo/src/app/screens/home-screen/home-screen.component.html
@@ -1,1 +1,8 @@
-<p>home-screen works!</p>
+<vui-view rowGap="2rem">
+    <vui-text size="header2">Home</vui-text>
+    <vui-card>
+        <vui-view padding="1.5rem" rowGap="1.5rem">
+            Welcome home
+        </vui-view>
+    </vui-card>
+</vui-view>
