--- a/projects/vynil-ui-demo/src/app/screens/inputs/image-input-demo-screen/image-input-demo-screen.component.html
+++ b/projects/vynil-ui-demo/src/app/screens/inputs/image-input-demo-screen/image-input-demo-screen.component.html
@@ -3,14 +3,18 @@
     <vui-card>
         <vui-view padding="1.5rem" rowGap="1.5rem">
             <vui-view [formGroup]="form" rowGap="0.75rem" style="width: 100%">
-                <vui-text size="l">Image URL</vui-text>
-                <vui-image-input formControlName="url"></vui-image-input>
+                <vui-text size="l">Image URL Input</vui-text>
+                <vui-image-url-input formControlName="url"></vui-image-url-input>
+                <vui-text size="l">Image URL Input</vui-text>
+                <vui-image-array-input formControlName="urls" [roundEntries]="true"></vui-image-array-input>
             </vui-view>
             <vui-view rowGap="0.75rem" alignItems="stretch" style="width: 100%; max-width: 80rem" overflow="hidden">
                 <vui-text size="large">Values</vui-text>
                 <vui-card cardStyle="dark">
                     <vui-view padding="1rem" rowGap="0.75rem">
-                        <vui-text>Image URL Value - {{ value.url }}</vui-text>
+                        <vui-text>Image URL Input Value: {{ value.url }}</vui-text>
+                        <vui-text>Image Array Input Values:</vui-text>
+                        <vui-text *ngFor="let entry of value.urls">{{ entry }}</vui-text>
                     </vui-view>
                 </vui-card>
             </vui-view>
