--- a/projects/vynil-ui/src/lib/components/images/icon/icon.component.html
+++ b/projects/vynil-ui/src/lib/components/images/icon/icon.component.html
@@ -1,7 +1,13 @@
-<img
+<!-- <img
     [ngClass]="size + ' ' + (actionable ? 'actionable' : '') + ' ' + (disabled ? 'disabled' : '')"
     [ngStyle]="{
         'transform': 'rotate(' + rotation + 'deg)'
     }"
     [src]="icon ? './assets/icons/' + icon + '.svg' : ''"
-/>
+/> -->
+
+<div
+    class="icon"
+    [ngClass]="size + ' ' + (actionable ? 'actionable' : '') + ' ' + (disabled ? 'disabled' : '')"
+    [ngStyle]="styleObject">
+</div>
