--- a/projects/vynil-ui/src/lib/components/layout/sidebar/sidebar.component.html
+++ b/projects/vynil-ui/src/lib/components/layout/sidebar/sidebar.component.html
@@ -1,7 +1,8 @@
 <vui-view
-    alignItems="stretch"
     [width]="width"
     [scrollable]="true"
+    alignItems="stretch"
+    justifyContent="flex-start"
     [minHeight]="'calc(100vh - ' + headerHeight + ')'"
     [backgroundColor]="'var(--vui-color-background-lighter)'">
     <ng-content></ng-content>
