Icon changes cleanup

--- a/projects/vynil-ui-demo/src/app/app.component.html
+++ b/projects/vynil-ui-demo/src/app/app.component.html
@@ -2,7 +2,7 @@
     <vui-view>
         <vui-header>
             <vui-view flexDirection="row" alignItems="center" columnGap="1rem">
-                <vui-icon color="var(--vui-color-background-darker)" icon="vynil-dark"></vui-icon>
+                <vui-icon color="var(--vui-color-background-darker)" icon="vynil"></vui-icon>
                 <vui-text size="xlarge" weight="700" color="var(--vui-color-background-darker)">Vynil-UI Demo</vui-text>
             </vui-view>
         </vui-header>
